--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
+/* Asterix references all (reseting padding and margin to 0)*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Setting main back ground color */
 body {
     background-color: #d9dcd6;
 }
 
+/* deleted header class and used header element */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -43,7 +46,8 @@ a {
     text-decoration: none;
 }
 
-.hero {
+/* Big Central Image (was .hero) moved above p */
+.mainImage {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -56,22 +60,26 @@ p {
     font-size: 16px;
 }
 
+/* Used for pushing images to the left and right of the text */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* same */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/* same */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* added margin-bottom and color to clean up unneccesary code */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,21 +93,25 @@ p {
     color:#fff;
 }
 
+/* puts correct spacing on the aside section */
 .benefits article {
     margin-bottom:32px;
 }
 
+/* condensed into one (was .benefit-brand h3 etc) */
 aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/* condensed the 3 image classes into one */
 aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 } 
 
+/* condensed 3 classes into 1 */
 .contentArticle {
     margin-bottom: 20px;
     padding: 50px;
@@ -109,15 +121,18 @@ aside img {
     color: #ffffff;
 }
 
+/* Condensed the 3 image classes into one */
 content img {
     max-height: 200px;
 }
 
+/* condensed 3 classes into one */
 content h2 {
     margin-bottom:20px;
     font-size:36px;
 }
 
+/* deleted footer class, made into element */
 footer {
     padding: 30px;
     clear: both;
