--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 /* Setting main back ground color */
 body {
     background-color: #d9dcd6;
+    font-size:16px;
 }
 
 /* deleted header class and used header element */
@@ -56,23 +57,17 @@ a {
     background-position: center;
 }
 
-p {
-    font-size: 16px;
-}
-
 /* Used for pushing images to the left and right of the text */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-/* same */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
-/* same */
 .content {
     width: 75%;
     display: inline-block;
@@ -89,7 +84,7 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    margin-bottom: 32px;
+    /* margin-bottom: 32px; */
     color:#fff;
 }
 
