added link to readme, changed links from wiki to spot on website, changed ids for main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ aside img {
 } 
 
 /* condensed 3 classes into 1 */
-.contentArticle {
+#orManagement, #smMarketing, #seOptimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
